Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,6 +30,264 @@
         <section id="main-content">
           <h1>
 <a name="androiddevtools" class="anchor" href="#androiddevtools"><span class="octicon octicon-link"></span></a>AndroidDevTools</h1>
+
+<h2>
+<a name="adt-bundle" class="anchor" href="#adt-bundle"><span class="octicon octicon-link"></span></a>ADT Bundle</h2>
+
+<p>ADT Bundle包含了Eclipse、ADT插件和SDK Tools，是已经集成好的IDE，只需安装好Jdk即可开始开发，推荐初学者下载ADT Bundle，不用再折腾开发环境。</p>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+<th align="center">Windows</th>
+<th align="center">Max OSX</th>
+<th align="center">Linux</th>
+</tr></thead>
+<tbody><tr>
+<td align="center">23.0.0</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1i39mvY1">32位</a> <a href="http://pan.baidu.com/s/1o65ExPS">64位</a>
+</td>
+<td align="center"><a href="http://pan.baidu.com/s/1hqvHkry">64位</a></td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1mgoh41q">32位</a> <a href="http://pan.baidu.com/s/1qWJh4wk">64位</a>
+</td>
+</tr></tbody>
+</table><h2>
+<a name="android-studio" class="anchor" href="#android-studio"><span class="octicon octicon-link"></span></a>Android Studio</h2>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+<th align="center">Windows</th>
+<th align="center">Max OSX</th>
+<th align="center">Linux</th>
+</tr></thead>
+<tbody>
+<tr>
+<td align="center">0.8.1</td>
+<td align="center"><a href="http://pan.baidu.com/s/1o6LTxVG">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1dD5qHjF">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1kTqlzxH">下载</a></td>
+</tr>
+<tr>
+<td align="center">0.8 0</td>
+<td align="center"><a href="http://pan.baidu.com/s/1eQ5oGaI">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1kTHpLyR">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1c0qzDao">下载</a></td>
+</tr>
+<tr>
+<td align="center">0.6.1</td>
+<td align="center"><a href="http://pan.baidu.com/s/1hqqX2ba">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1qWjpB9y">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1qWBFTiG">下载</a></td>
+</tr>
+<tr>
+<td align="center">0.6.0</td>
+<td align="center"><a href="http://pan.baidu.com/s/1sjJf0Pf">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1jcixK">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1hqpB7As">下载</a></td>
+</tr>
+<tr>
+<td align="center">0.5.9</td>
+<td align="center"><a href="http://pan.baidu.com/s/1dDw3oYl">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1c08a8y0">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1hqeMmVU">下载</a></td>
+</tr>
+<tr>
+<td align="center">0.5.8</td>
+<td align="center"><a href="http://pan.baidu.com/s/1qWLPqd2">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1i3ECc9f">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1i37QxBf">下载</a></td>
+</tr>
+</tbody>
+</table><h2>
+<a name="adt-plugin" class="anchor" href="#adt-plugin"><span class="octicon octicon-link"></span></a>ADT Plugin</h2>
+
+<p>离线安装ADT插件请戳<a href="https://github.com/inferjay/AndroidDevTools/wiki/%E9%A6%96%E9%A1%B5"><strong>项目wiki</strong></a></p>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+</tr></thead>
+<tbody>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1sjArX7J">ADT-23.0.0</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1jGMb5yQ">ADT-22.6.3</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1pJ185Rl">AdT-22.6.1</a></td>
+</tr>
+</tbody>
+</table><h2>
+<a name="sdk-tools" class="anchor" href="#sdk-tools"><span class="octicon octicon-link"></span></a>SDK Tools</h2>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+<th align="center">Windows</th>
+<th align="center">Max OSX</th>
+<th align="center">Linux</th>
+</tr></thead>
+<tbody><tr>
+<td align="center">sdk-tools-r23</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1nt5Gwhb">installer_r23-windows.exe</a> <a href="http://pan.baidu.com/s/1kTC6akZ">android-sdk_r23-windows.zip</a>
+</td>
+<td align="center"><a href="http://pan.baidu.com/s/1gdj7X3l">android-sdk_r23-macosx.zip</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1yBnSa">android-sdk_r23-linux.tgz</a></td>
+</tr></tbody>
+</table><h2>
+<a name="sdk" class="anchor" href="#sdk"><span class="octicon octicon-link"></span></a>SDK</h2>
+
+<p>这是最新的Android L系统的sdk，下载解压后将解压出的整个文件夹复制或者移动到<code>your sdk 路径/platforms</code>下即可。</p>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+<th align="center">Windows</th>
+<th align="center">Max OSX</th>
+<th align="center">Linux</th>
+</tr></thead>
+<tbody><tr>
+<td align="center">android-L</td>
+<td align="center"><a href="http://pan.baidu.com/s/1jGifWBc">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1i3srudR">下载</a></td>
+<td align="center"></td>
+</tr></tbody>
+</table><h2>
+<a name="support-library" class="anchor" href="#support-library"><span class="octicon octicon-link"></span></a>Support Library</h2>
+
+<p>包含supportive、v7和v13，下载解压后将解压出的整个文件夹复制或者移动到<code>your sdk 路径/extras</code>下即可。</p>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+</tr></thead>
+<tbody><tr>
+<td align="center"><a href="http://pan.baidu.com/s/1o6OBlR8">20</a></td>
+</tr></tbody>
+</table><h2>
+<a name="ndk" class="anchor" href="#ndk"><span class="octicon octicon-link"></span></a>NDK</h2>
+
+<p>C/C++开发Android应用工具包</p>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+<th align="center">Windows</th>
+<th align="center">Max OSX</th>
+<th align="center">Linux</th>
+</tr></thead>
+<tbody><tr>
+<td align="center">ndk-r9d</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1dDxjl8t">32位</a> <a href="http://pan.baidu.com/s/1jGgecXw">64位</a>
+</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1eQnDNEE">32位</a> <a href="http://pan.baidu.com/s/1i3l5L8T">64位</a>
+</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1jGr9w4A">32位</a> <a href="http://pan.baidu.com/s/1sjAXS41">64位</a>
+</td>
+</tr></tbody>
+</table><table>
+<thead><tr>
+<th align="center">版本号</th>
+</tr></thead>
+<tbody><tr>
+<td align="center"><a href="http://pan.baidu.com/s/1c0EMn8O">cxx-stl-libs-with-debug-info.zip</a></td>
+</tr></tbody>
+</table><h2>
+<a name="jdk" class="anchor" href="#jdk"><span class="octicon octicon-link"></span></a>JDK</h2>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+<th align="center">Windows</th>
+<th align="center">Max OSX</th>
+<th align="center">Linux</th>
+</tr></thead>
+<tbody>
+<tr>
+<td align="center">1.8 u5</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1bn2CVIB">32位</a> <a href="http://pan.baidu.com/s/1eQtJyGq">64位</a>
+</td>
+<td align="center"><a href="http://pan.baidu.com/s/1pJkD78R">64位</a></td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1o64s0pc">32位</a> <a href="http://pan.baidu.com/s/1jG3KBjg">64位</a>
+</td>
+</tr>
+<tr>
+<td align="center">1.7 u60</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1nt5a3jj">32位</a> <a href="http://pan.baidu.com/s/1o61AAHc">64位</a>
+</td>
+<td align="center"><a href="http://pan.baidu.com/s/1nt0qGfn">64位</a></td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1eQd4wVK">32位</a> <a href="http://pan.baidu.com/s/1jGzGQLw">64位</a>
+</td>
+</tr>
+<tr>
+<td align="center">1.6 u45</td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1o67aooM">32位</a> <a href="http://pan.baidu.com/s/1dDmtSZJ">64位</a>
+</td>
+<td align="center"><a href="http://pan.baidu.com/s/1hqpB7Nm">64位</a></td>
+<td align="center">
+<a href="http://pan.baidu.com/s/1pJJj5Ib">32位</a> <a href="http://pan.baidu.com/s/1dDck3O9">64位</a>
+</td>
+</tr>
+</tbody>
+</table><h2>
+<a name="gradle" class="anchor" href="#gradle"><span class="octicon octicon-link"></span></a>Gradle</h2>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+</tr></thead>
+<tbody>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1dDzleTV">gradle-2.0-rc-2-all.zip</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1Gmlx8">gradle-1.12-all.zip</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1c0hCmdE">gradle-1.11-all.zip</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1qWtzaGW">gradle-1.10-all.zip</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1dDeSuXV">gradle-1.9-all.zip</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1o6Npqqe">gradle-1.8-all.zip</a></td>
+</tr>
+<tr>
+<td align="center"><a href="http://pan.baidu.com/s/1pJnvyWz">gradle-1.7-all.zip</a></td>
+</tr>
+</tbody>
+</table><h2>
+<a name="gradle-user-guide" class="anchor" href="#gradle-user-guide"><span class="octicon octicon-link"></span></a>Gradle User Guide</h2>
+
+<table>
+<thead><tr>
+<th align="center">版本号</th>
+</tr></thead>
+<tbody><tr>
+<td align="center"><a href="http://pan.baidu.com/s/1dD7sC2d">gradle 1.12</a></td>
+</tr></tbody>
+</table><h2>
+<a name="google-android-l-50-%E8%AE%BE%E8%AE%A1%E8%A7%84%E8%8C%83%E5%8F%8A%E7%B4%A0%E6%9D%90" class="anchor" href="#google-android-l-50-%E8%AE%BE%E8%AE%A1%E8%A7%84%E8%8C%83%E5%8F%8A%E7%B4%A0%E6%9D%90"><span class="octicon octicon-link"></span></a>Google Android L (5.0) 设计规范及素材</h2>
+
+<p><a href="http://pan.baidu.com/s/1i35iBNv">设计规范及素材下载</a>(感谢 <a href="http://weibo.com/sanityd">@SanityD</a>)</p>
+
+<hr><p>版权声明：原创译文欢迎自由转载-非商用-非衍生-保持署名 | <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">Creative Commons BY-NC-ND 3.0</a></p>
         </section>
 
         <aside id="sidebar">
