Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='stylesheets/font-face.css' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
@@ -287,7 +287,10 @@
 
 <p><a href="http://pan.baidu.com/s/1i35iBNv">设计规范及素材下载</a>(感谢 <a href="http://weibo.com/sanityd">@SanityD</a>)</p>
 
-<hr><p>版权声明：原创译文欢迎自由转载-非商用-非衍生-保持署名 | <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">Creative Commons BY-NC-ND 3.0</a></p>
+<hr><h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p><a href="https://github.com/inferjay/AndroidDevTools/blob/master/LICENSE">Apache License 2.0</a></p>
         </section>
 
         <aside id="sidebar">
