Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='stylesheets/font-face.css' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载  AndroidDevTools by inferjay</title>
+    <title>AndroidDevTools by inferjay</title>
   </head>
 
   <body>
@@ -32,7 +32,10 @@
 <a name="androiddevtools" class="anchor" href="#androiddevtools"><span class="octicon octicon-link"></span></a>AndroidDevTools</h1>
 
 <h2>
-<a name="adt-bundle" class="anchor" href="#adt-bundle"><span class="octicon octicon-link"></span></a>ADT Bundle</h2>
+<a name="android-tools" class="anchor" href="#android-tools"><span class="octicon octicon-link"></span></a>Android Tools</h2>
+
+<h4>
+<a name="adt-bundle" class="anchor" href="#adt-bundle"><span class="octicon octicon-link"></span></a>ADT Bundle</h4>
 
 <p>ADT Bundle包含了Eclipse、ADT插件和SDK Tools，是已经集成好的IDE，只需安装好Jdk即可开始开发，推荐初学者下载ADT Bundle，不用再折腾开发环境。</p>
 
@@ -53,8 +56,8 @@
 <a href="http://pan.baidu.com/s/1mgoh41q">32位</a> <a href="http://pan.baidu.com/s/1qWJh4wk">64位</a>
 </td>
 </tr></tbody>
-</table><h2>
-<a name="android-studio" class="anchor" href="#android-studio"><span class="octicon octicon-link"></span></a>Android Studio</h2>
+</table><h4>
+<a name="android-studio" class="anchor" href="#android-studio"><span class="octicon octicon-link"></span></a>Android Studio</h4>
 
 <table>
 <thead><tr>
@@ -64,6 +67,12 @@
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
+<tr>
+<td align="center">0.8.2</td>
+<td align="center"><a href="http://pan.baidu.com/s/1eQ1ln14">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1pJkDQHl">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1c0ncknA">下载</a></td>
+</tr>
 <tr>
 <td align="center">0.8.1</td>
 <td align="center"><a href="http://pan.baidu.com/s/1o6LTxVG">下载</a></td>
@@ -101,8 +110,8 @@
 <td align="center"><a href="http://pan.baidu.com/s/1i37QxBf">下载</a></td>
 </tr>
 </tbody>
-</table><h2>
-<a name="adt-plugin" class="anchor" href="#adt-plugin"><span class="octicon octicon-link"></span></a>ADT Plugin</h2>
+</table><h4>
+<a name="adt-plugin" class="anchor" href="#adt-plugin"><span class="octicon octicon-link"></span></a>ADT Plugin</h4>
 
 <p>离线安装ADT插件请戳<a href="https://github.com/inferjay/AndroidDevTools/wiki/%E9%A6%96%E9%A1%B5"><strong>项目wiki</strong></a></p>
 
@@ -121,8 +130,8 @@
 <td align="center"><a href="http://pan.baidu.com/s/1pJ185Rl">AdT-22.6.1</a></td>
 </tr>
 </tbody>
-</table><h2>
-<a name="sdk-tools" class="anchor" href="#sdk-tools"><span class="octicon octicon-link"></span></a>SDK Tools</h2>
+</table><h4>
+<a name="sdk-tools" class="anchor" href="#sdk-tools"><span class="octicon octicon-link"></span></a>SDK Tools</h4>
 
 <table>
 <thead><tr>
@@ -139,8 +148,8 @@
 <td align="center"><a href="http://pan.baidu.com/s/1gdj7X3l">android-sdk_r23-macosx.zip</a></td>
 <td align="center"><a href="http://pan.baidu.com/s/1yBnSa">android-sdk_r23-linux.tgz</a></td>
 </tr></tbody>
-</table><h2>
-<a name="sdk" class="anchor" href="#sdk"><span class="octicon octicon-link"></span></a>SDK</h2>
+</table><h4>
+<a name="sdk" class="anchor" href="#sdk"><span class="octicon octicon-link"></span></a>SDK</h4>
 
 <p>这是最新的Android L系统的sdk，下载解压后将解压出的整个文件夹复制或者移动到<code>your sdk 路径/platforms</code>下即可。</p>
 
@@ -157,8 +166,8 @@
 <td align="center"><a href="http://pan.baidu.com/s/1i3srudR">下载</a></td>
 <td align="center"></td>
 </tr></tbody>
-</table><h2>
-<a name="support-library" class="anchor" href="#support-library"><span class="octicon octicon-link"></span></a>Support Library</h2>
+</table><h4>
+<a name="support-library" class="anchor" href="#support-library"><span class="octicon octicon-link"></span></a>Support Library</h4>
 
 <p>包含supportive、v7和v13，下载解压后将解压出的整个文件夹复制或者移动到<code>your sdk 路径/extras</code>下即可。</p>
 
@@ -169,8 +178,8 @@
 <tbody><tr>
 <td align="center"><a href="http://pan.baidu.com/s/1o6OBlR8">20</a></td>
 </tr></tbody>
-</table><h2>
-<a name="ndk" class="anchor" href="#ndk"><span class="octicon octicon-link"></span></a>NDK</h2>
+</table><h4>
+<a name="ndk" class="anchor" href="#ndk"><span class="octicon octicon-link"></span></a>NDK</h4>
 
 <p>C/C++开发Android应用工具包</p>
 
@@ -200,8 +209,8 @@
 <tbody><tr>
 <td align="center"><a href="http://pan.baidu.com/s/1c0EMn8O">cxx-stl-libs-with-debug-info.zip</a></td>
 </tr></tbody>
-</table><h2>
-<a name="android-l-preview-system-image" class="anchor" href="#android-l-preview-system-image"><span class="octicon octicon-link"></span></a>Android L Preview System Image</h2>
+</table><h4>
+<a name="android-l-preview-system-image" class="anchor" href="#android-l-preview-system-image"><span class="octicon octicon-link"></span></a>Android L Preview System Image</h4>
 
 <table>
 <thead><tr>
@@ -218,8 +227,8 @@
 <td align="center"><a href="http://pan.baidu.com/s/1mgn1CyG">razor-lpv79-preview-d0ddf8ce.tgz</a></td>
 </tr>
 </tbody>
-</table><h2>
-<a name="jdk" class="anchor" href="#jdk"><span class="octicon octicon-link"></span></a>JDK</h2>
+</table><h4>
+<a name="jdk" class="anchor" href="#jdk"><span class="octicon octicon-link"></span></a>JDK</h4>
 
 <table>
 <thead><tr>
@@ -260,8 +269,8 @@
 </td>
 </tr>
 </tbody>
-</table><h2>
-<a name="gradle" class="anchor" href="#gradle"><span class="octicon octicon-link"></span></a>Gradle</h2>
+</table><h4>
+<a name="gradle" class="anchor" href="#gradle"><span class="octicon octicon-link"></span></a>Gradle</h4>
 
 <table>
 <thead><tr>
@@ -290,8 +299,8 @@
 <td align="center"><a href="http://pan.baidu.com/s/1pJnvyWz">gradle-1.7-all.zip</a></td>
 </tr>
 </tbody>
-</table><h2>
-<a name="gradle-user-guide" class="anchor" href="#gradle-user-guide"><span class="octicon octicon-link"></span></a>Gradle User Guide</h2>
+</table><h4>
+<a name="gradle-user-guide" class="anchor" href="#gradle-user-guide"><span class="octicon octicon-link"></span></a>Gradle User Guide</h4>
 
 <table>
 <thead><tr>
@@ -301,12 +310,46 @@
 <td align="center"><a href="http://pan.baidu.com/s/1dD7sC2d">gradle 1.12</a></td>
 </tr></tbody>
 </table><h2>
-<a name="google-android-l-50-%E8%AE%BE%E8%AE%A1%E8%A7%84%E8%8C%83%E5%8F%8A%E7%B4%A0%E6%9D%90" class="anchor" href="#google-android-l-50-%E8%AE%BE%E8%AE%A1%E8%A7%84%E8%8C%83%E5%8F%8A%E7%B4%A0%E6%9D%90"><span class="octicon octicon-link"></span></a>Google Android L (5.0) 设计规范及素材</h2>
+<a name="course" class="anchor" href="#course"><span class="octicon octicon-link"></span></a>Course</h2>
 
-<p><a href="http://pan.baidu.com/s/1i35iBNv">设计规范及素材下载</a>(感谢 <a href="http://weibo.com/sanityd">@SanityD</a>)</p>
+<h4>
+<a name="google-android%E5%AE%98%E6%96%B9%E5%9F%B9%E8%AE%AD%E8%AF%BE%E7%A8%8B%E4%B8%AD%E6%96%87%E7%89%88" class="anchor" href="#google-android%E5%AE%98%E6%96%B9%E5%9F%B9%E8%AE%AD%E8%AF%BE%E7%A8%8B%E4%B8%AD%E6%96%87%E7%89%88"><span class="octicon octicon-link"></span></a>Google Android官方培训课程中文版</h4>
 
-<hr><h2>
-<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
+<p>地址：<a href="http://hukai.me/android-training-course-in-chinese/index.html">http://hukai.me/android-training-course-in-chinese/index.html</a></p>
+
+<h2>
+<a name="design" class="anchor" href="#design"><span class="octicon octicon-link"></span></a>Design</h2>
+
+<h4>
+<a name="android%E8%AE%BE%E8%AE%A1%E6%8C%87%E5%8D%97%E9%9D%9E%E5%AE%98%E6%96%B9%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87%E7%89%88" class="anchor" href="#android%E8%AE%BE%E8%AE%A1%E6%8C%87%E5%8D%97%E9%9D%9E%E5%AE%98%E6%96%B9%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87%E7%89%88"><span class="octicon octicon-link"></span></a>Android设计指南非官方简体中文版</h4>
+
+<p>Topfun镜像地址：<a href="http://www.topfun.us/adchs/index.html">http://www.topfun.us/adchs/index.html</a></p>
+
+<p>Github镜像地址：<a href="http://adchs.github.io">http://adchs.github.io</a></p>
+
+<p>ApkBus镜像地址：<a href="http://www.apkbus.com/design/">http://www.apkbus.com/design/</a></p>
+
+<p>Segmentfault镜像地址：<a href="http://mirrors.segmentfault.com/adchs/">http://mirrors.segmentfault.com/adchs/</a></p>
+
+<p>多看阅读镜像地址：<a href="http://www.duokan.com/book/47790">http://www.duokan.com/book/47790</a></p>
+
+<h4>
+<a name="android-cheatsheet-for-graphic-designers" class="anchor" href="#android-cheatsheet-for-graphic-designers"><span class="octicon octicon-link"></span></a>Android Cheatsheet for Graphic Designers</h4>
+
+<p>地址:<a href="http://petrnohejl.github.io/Android-Cheatsheet-For-Graphic-Designers/">http://petrnohejl.github.io/Android-Cheatsheet-For-Graphic-Designers/</a></p>
+
+<h4>
+<a name="google-material-design-%E4%B8%AD%E6%96%87%E7%89%88" class="anchor" href="#google-material-design-%E4%B8%AD%E6%96%87%E7%89%88"><span class="octicon octicon-link"></span></a>Google Material Design 中文版</h4>
+
+<p>地址：<a href="http://design.1sters.com">http://design.1sters.com</a></p>
+
+<h4>
+<a name="google-material-design-%E7%B4%A0%E6%9D%90" class="anchor" href="#google-material-design-%E7%B4%A0%E6%9D%90"><span class="octicon octicon-link"></span></a>Google Material Design 素材</h4>
+
+<p><a href="http://pan.baidu.com/s/1i35iBNv">素材下载</a>(感谢 <a href="http://weibo.com/sanityd">@SanityD</a>)</p>
+
+<hr><h1>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
 
 <p><a href="https://github.com/inferjay/AndroidDevTools/blob/master/LICENSE">Apache License 2.0</a></p>
         </section>
