添加友言评论框

--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@
 <p>版权声明：版权归原作者所有，这里仅做收集整理，欢迎自由转载-非商用-非衍生-保持署名 | <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">Creative Commons BY-NC-ND 3.0</a></p>
       </section>
     </div>
+    
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1948353"></script>
+<!-- UY END -->
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
