修改页面标题
最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载 Google Android官方培训课程中文版 Android设计指南非官方简体中文版 Google Material Design 中文版

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>AndroidDevTools</title>
+    <title>最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载 Google Android官方培训课程中文版 Android设计指南非官方简体中文版 Google Material Design 中文版 AndroidDevTools by inferjay</title>
   </head>
 
   <body>
