修改子标题

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/inferjay/AndroidDevTools">View on GitHub</a>
 
           <h1 id="project_title">AndroidDevTools</h1>
-          <h2 id="project_tagline">Android开发工具</h2>
+          <h2 id="project_tagline">最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载 Google Android官方培训课程中文版 Android设计指南非官方简体中文版 Google Material Design 中文版</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>
