--- a/index.html
+++ b/index.html
@@ -22,8 +22,37 @@
           <h2 id="project_tagline">最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/inferjay/AndroidDevTools/tarball/master">Download this project as a tar.gz file</a>
+              <!--<a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>-->
+              <!--<a class="tar_download_link" href="https://github.com/inferjay/AndroidDevTools/tarball/master">Download this project as a tar.gz file</a>-->
+              <!-- JiaThis Button BEGIN -->
+              <div class="jiathis_style_32x32">
+                  <a class="jiathis_button_tsina"></a>
+                  <a class="jiathis_button_weixin"></a>
+                  <a class="jiathis_button_twitter"></a>
+                  <a class="jiathis_button_fb"></a>
+                  <a class="jiathis_button_googleplus"></a>
+                  <a class="jiathis_button_qzone"></a>
+                  <a href="http://www.jiathis.com/share?uid=1948353" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
+                  <a class="jiathis_counter_style"></a>
+              </div>
+              <script type="text/javascript" >
+              var jiathis_config={
+              	data_track_clickback:true,
+              	url:"http://www.androiddevtools.cn",
+              	summary:"最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载 Google Android官方培训课程中文版 Android设计指南非官方简体中文版 Google Material Design 中文版 AndroidDevTools by inferjay",
+              	title:"无需翻墙下载Android开发所需的工具 #Android开发工具#",
+              	ralateuid:{
+              		"tsina":"androiddevtools"
+              	},
+              	shortUrl:false,
+              	hideMore:false
+              }
+              </script>
+              <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1948353" charset="utf-8"></script>
+              <!-- JiaThis Button END -->
+
+
+              
             </section>
         </header>
     </div>
