--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/inferjay/AndroidDevTools">View on GitHub</a>
 
           <h1 id="project_title">AndroidDevTools</h1>
-          <h2 id="project_tagline">最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载</h2>
+          <h2 id="project_tagline">Android开发工具下载 最新版 ADT Bundle Android Studio SDK Tools下载</h2>
 
             <!--<section id="downloads">-->
               <!--<a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>-->
