修改Mac拼写错误

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <thead><tr>
 <th align="center">版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody><tr>
@@ -95,7 +95,7 @@
 <thead><tr>
 <th align="center">版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
@@ -169,7 +169,7 @@
 <thead><tr>
 <th align="center">版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody><tr>
@@ -189,7 +189,7 @@
 <thead><tr>
 <th align="left">系统版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
@@ -281,7 +281,7 @@
 <thead><tr>
 <th align="left">系统版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
@@ -343,7 +343,7 @@
 <thead><tr>
 <th align="left">系统版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
@@ -427,7 +427,7 @@
 <thead><tr>
 <th align="left">系统版本</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
@@ -453,7 +453,7 @@
 <thead><tr>
 <th align="left">系统版本</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody><tr>
@@ -574,7 +574,7 @@
 <thead><tr>
 <th align="center">版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody><tr>
@@ -623,7 +623,7 @@
 <thead><tr>
 <th align="center">版本号</th>
 <th align="center">Windows</th>
-<th align="center">Max OSX</th>
+<th align="center">Mac OSX</th>
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
