添加Android API指南中文版

--- a/index.html
+++ b/index.html
@@ -724,6 +724,12 @@
 </tr>
 </tbody>
 </table><h4>
+
+<h4>
+<a name="android-api-guides-cn" class="anchor" href="#android-api-guides-cn"><span class="octicon octicon-link"></span></a>Android API指南中文版</h4>
+
+<p>地址：<a href="http://wiki.eoeandroid.com/Android_API_Guides">http://wiki.eoeandroid.com/Android_API_Guides</a></p>
+
 <a name="gradle-user-guide" class="anchor" href="#gradle-user-guide"><span class="octicon octicon-link"></span></a>Gradle User Guide</h4>
 
 <table>
