--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 </tr></thead>
 <tbody>
 <tr>
+<td align="center">0.8.4</td>
+<td align="center"><a href="http://pan.baidu.com/s/1qWqbWyo">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1i3Ia7Nv">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1ntwTDqx">下载</a></td>
+</tr>
+<tr>
 <td align="center">0.8.3</td>
 <td align="center"><a href="http://pan.baidu.com/s/1eQioNrs">下载</a></td>
 <td align="center"><a href="http://pan.baidu.com/s/1o6v5E6Q">下载</a></td>
