添加ndk-r10下载链接

--- a/index.html
+++ b/index.html
@@ -618,6 +618,100 @@
 <p>C/C++开发Android应用工具包</p>
 
 <table>
+	<thead>
+		<tr>
+			<th align="center">Platform(32-bit target)</th>
+			<th align="center">Package </th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td align="left">Windows 32-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1bnB1o1T">android-ndk32-r10-windows-x86.zip</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Windows 64-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1gdmW6cj">android-ndk32-r10-windows-x86_64.zip</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Mac OS X 32-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1jGtBYyq">android-ndk32-r10-darwin-x86.tar.bz2</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Mac OS X 64-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1gdADfaF">android-ndk32-r10-darwin-x86_64.tar.bz2</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Linux 32-bit (x86)</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1V2Tg">android-ndk32-r10-linux-x86.tar.bz2</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Linux 64-bit (x86)</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1pJJQokV">android-ndk32-r10-linux-x86_64.tar.bz2</a>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<table>
+	<thead>
+		<tr>
+			<th align="center">Platform(64-bit target)</th>
+			<th align="center">Package </th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td align="left">Windows 32-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1qW0RtzI">android-ndk64-r10-windows-x86.zip</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Windows 64-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1ntypDpf">android-ndk64-r10-windows-x86_64.zip</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Mac OS X 32-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1o6G44Eu">android-ndk64-r10-darwin-x86.tar.bz2</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Mac OS X 64-bit</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1gd7pvJ9">android-ndk64-r10-darwin-x86_64.tar.bz2</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Linux 32-bit (x86)</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1hql8AIo">android-ndk64-r10-linux-x86.tar.bz2</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="left">Linux 64-bit (x86)</td>
+			<td align="left">
+				<a href="http://pan.baidu.com/s/1dDreuPz">android-ndk64-r10-linux-x86_64.tar.bz2</a>
+			</td>
+		</tr>
+	</tbody>
+</table>
+
+<table>
 <thead><tr>
 <th align="center">版本号</th>
 <th align="center">Windows</th>
@@ -636,14 +730,17 @@
 <a href="http://pan.baidu.com/s/1jGr9w4A">32位</a> <a href="http://pan.baidu.com/s/1sjAXS41">64位</a>
 </td>
 </tr></tbody>
-</table><table>
-<thead><tr>
-<th align="center">版本号</th>
-</tr></thead>
-<tbody><tr>
-<td align="center"><a href="http://pan.baidu.com/s/1c0EMn8O">cxx-stl-libs-with-debug-info.zip</a></td>
-</tr></tbody>
-</table><h4>
+</table>
+<table>
+	<thead>
+		<tr><th align="left">(32-, 64-bit)</th></tr>
+	</thead>
+	<tbody>
+		<tr><td align="center"><a href="http://pan.baidu.com/s/1xWgUE">android-ndk-r10-cxx-stl-libs-with-debug-info.zip</a></td></tr>
+		<tr><td align="center"><a href="http://pan.baidu.com/s/1c0EMn8O">android-ndk-r9-cxx-stl-libs-with-debug-info.zip</a></td></tr>
+	</tbody>
+</table>
+<h4>
 <a name="android-l-preview-system-image" class="anchor" href="#android-l-preview-system-image"><span class="octicon octicon-link"></span></a>Android L Preview System Image</h4>
 
 <p>这个是Android L Preview系统的刷机镜像。</p>
