--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 </table>
 <table>
 	<thead>
-		<tr><th align="left">(32-, 64-bit)</th><th align="left">Package</th></tr>
+		<tr><th align="left">Additional Download(32-, 64-bit)</th><th align="left">Package</th></tr>
 	</thead>
 	<tbody>
 		<tr><td align="left">r10 STL debug info</td><td align="center"><a href="http://pan.baidu.com/s/1xWgUE">android-ndk-r10-cxx-stl-libs-with-debug-info.zip</a></td></tr>
