添加Android Studio 0.8.5下载链接

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 </tr></thead>
 <tbody>
 <tr>
+<td align="center">0.8.5</td>
+<td align="center"><a href="http://pan.baidu.com/s/1dDxQfh3">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1bn6HEwR">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1dDkYOMH">下载</a></td>
+</tr>
+<tr>
 <td align="center">0.8.4</td>
 <td align="center"><a href="http://pan.baidu.com/s/1qWqbWyo">下载</a></td>
 <td align="center"><a href="http://pan.baidu.com/s/1i3Ia7Nv">下载</a></td>
