--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
 </tr></thead>
 <tbody>
 <tr>
+<td align="center">0.8.6</td>
+<td align="center"><a href="http://pan.baidu.com/s/1mg6zsGK">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1nt5b0F3">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1hq674bU">下载</a></td>
+</tr>
+<tr>
 <td align="center">0.8.5</td>
 <td align="center"><a href="http://pan.baidu.com/s/1dDxQfh3">下载</a></td>
 <td align="center"><a href="http://pan.baidu.com/s/1bn6HEwR">下载</a></td>
