添加Developing Android Apps课程地址

--- a/index.html
+++ b/index.html
@@ -869,6 +869,11 @@
 
 <p>地址：<a href="http://hukai.me/android-training-course-in-chinese/index.html">http://hukai.me/android-training-course-in-chinese/index.html</a></p>
 
+<h4>
+<a name="developing-android-apps" class="anchor" href="#developing-android-apps"><span class="octicon octicon-link"></span></a>Developing Android Apps</h4>
+
+<p>地址：<a href="https://www.udacity.com/course/ud853">https://www.udacity.com/course/ud853</a></p>
+
 <h2>
 <a name="design" class="anchor" href="#design"><span class="octicon octicon-link"></span></a>Design</h2>
 
