Add Android Studio 0.8.7 Download link

--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
 </tr></thead>
 <tbody>
 <tr>
+<td align="center">0.8.7</td>
+<td align="center"><a href="http://pan.baidu.com/s/1ntt61xn">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1eQCHAV4">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1eQcPIcq">下载</a></td>
+</tr>
+<tr>
 <td align="center">0.8.6</td>
 <td align="center"><a href="http://pan.baidu.com/s/1mg6zsGK">下载</a></td>
 <td align="center"><a href="http://pan.baidu.com/s/1nt5b0F3">下载</a></td>
