--- a/index.html
+++ b/index.html
@@ -20,39 +20,11 @@
 
           <h1 id="project_title">AndroidDevTools</h1>
           <h2 id="project_tagline">Android开发工具</h2>
-            <!--<section id="downloads">-->
-              <!--<a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>-->
-              <!--<a class="tar_download_link" href="https://github.com/inferjay/AndroidDevTools/tarball/master">Download this project as a tar.gz file</a>-->
-              <!-- JiaThis Button BEGIN -->
-              <div class="jiathis_style_32x32">
-                  <a class="jiathis_button_tsina"></a>
-                  <a class="jiathis_button_weixin"></a>
-                  <a class="jiathis_button_twitter"></a>
-                  <a class="jiathis_button_fb"></a>
-                  <a class="jiathis_button_googleplus"></a>
-                  <a class="jiathis_button_qzone"></a>
-                  <a href="http://www.jiathis.com/share?uid=1948353" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
-                  <a class="jiathis_counter_style"></a>
-              </div>
-              <script type="text/javascript" >
-              var jiathis_config={
-              	data_track_clickback:true,
-              	url:"http://www.androiddevtools.cn",
-              	summary:"最新版Android开发工具 ADT Bundle Android Studio SDK Tools下载 Google Android官方培训课程中文版 Android设计指南非官方简体中文版 Google Material Design 中文版 AndroidDevTools by inferjay",
-              	title:"无需翻墙下载Android开发所需的工具 #Android开发工具#",
-              	ralateuid:{
-              		"tsina":"androiddevtools"
-              	},
-              	shortUrl:false,
-              	hideMore:false
-              }
-              </script>
-              <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1948353" charset="utf-8"></script>
-              <!-- JiaThis Button END -->
 
-		<br>
-              
-            <!--</section>-->
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/inferjay/AndroidDevTools/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/inferjay/AndroidDevTools/tarball/master">Download this project as a tar.gz file</a>
+            </section>
         </header>
     </div>
 
@@ -120,6 +92,12 @@
 <th align="center">Linux</th>
 </tr></thead>
 <tbody>
+<tr>
+<td align="center">0.8.10</td>
+<td align="center"><a href="http://pan.baidu.com/s/1o6NWZuq">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1o6E36um">下载</a></td>
+<td align="center"><a href="http://pan.baidu.com/s/1i3iPGtn">下载</a></td>
+</tr>
 <tr>
 <td align="center">0.8.9</td>
 <td align="center"><a href="http://pan.baidu.com/s/1mggH8P6">下载</a></td>
@@ -1422,6 +1400,12 @@
 <td align="center"><a href="https://code.google.com/p/apk-view-tracer/">下载</a></td>
 <td align="center"></td>
 </tr>
+<tr>
+<td align="left">APT</td>
+<td>APT是一个Android平台高效性能测试组件，<br>提供丰富实用的功能，适用于开发自测、<br>定位性能瓶颈；<br>测试人员完成性能基准测试、竞品对比测试。</td>
+<td align="center"><a href="https://code.csdn.net/Tencent/apt">下载</a></td>
+<td align="center"><a href="http://www.eoeandroid.com/thread-497380-1-1.html">教程</a></td>
+</tr>
 </tbody>
 </table><h4>
 <a name="android%E5%A4%9A%E6%B8%A0%E9%81%93%E6%89%93%E5%8C%85%E5%B7%A5%E5%85%B7" class="anchor" href="#android%E5%A4%9A%E6%B8%A0%E9%81%93%E6%89%93%E5%8C%85%E5%B7%A5%E5%85%B7"><span class="octicon octicon-link"></span></a>Android多渠道打包工具</h4>
@@ -1916,6 +1900,15 @@
 <a name="guides" class="anchor" href="#guides"><span class="octicon octicon-link"></span></a>Guides</h2>
 
 <h4>
+<a name="google-java%E7%BC%96%E7%A8%8B%E9%A3%8E%E6%A0%BC%E6%8C%87%E5%8D%97%E4%B8%AD%E6%96%87%E7%89%88" class="anchor" href="#google-java%E7%BC%96%E7%A8%8B%E9%A3%8E%E6%A0%BC%E6%8C%87%E5%8D%97%E4%B8%AD%E6%96%87%E7%89%88"><span class="octicon octicon-link"></span></a>Google Java编程风格指南中文版</h4>
+
+<p>英文地址：<a href="http://google-styleguide.googlecode.com/svn/trunk/javaguide.html">http://google-styleguide.googlecode.com/svn/trunk/javaguide.html</a></p>
+
+<p>地址0：<a href="http://hawstein.com/posts/google-java-style.html">http://hawstein.com/posts/google-java-style.html</a></p>
+
+<p>地址1：<a href="https://github.com/codeset/google-java-styleguide">https://github.com/codeset/google-java-styleguide</a></p>
+
+<h4>
 <a name="android-api%E4%B8%AD%E6%96%87%E7%89%88" class="anchor" href="#android-api%E4%B8%AD%E6%96%87%E7%89%88"><span class="octicon octicon-link"></span></a>Android Api中文版</h4>
 
 <p>地址：<a href="http://wikidroid.sinaapp.com/Android%E4%B8%AD%E6%96%87API">http://wikidroid.sinaapp.com/Android中文API</a>)</p>
@@ -1983,7 +1976,7 @@
 <tr>
 <td align="left">Cut&amp;Slice</td>
 <td>切图神器</td>
-<td align="center"><a href="https://github.com/google/j2objc">下载</a></td>
+<td align="center"><a href="http://www.cutandslice.me">下载</a></td>
 <td align="center"></td>
 </tr>
 <tr>
@@ -1995,7 +1988,7 @@
 <tr>
 <td align="left">Cutterman</td>
 <td>最好用的切图工具</td>
-<td align="center"><a href="https://github.com/google/j2objc">下载</a></td>
+<td align="center"><a href="http://www.cutterman.cn">下载</a></td>
 <td align="center"></td>
 </tr>
 <tr>
@@ -2033,13 +2026,25 @@
 <tr>
 <td align="left">QuickGuide</td>
 <td></td>
-<td align="center"><a href="https://github.com/google/j2objc">下载</a></td>
+<td align="center"><a href="http://guchitaka.com/project-view/quickguidepro/">下载</a></td>
 <td align="center"></td>
 </tr>
 <tr>
 <td align="left">Long Shadow Generator</td>
 <td>长投影效果生成插件</td>
-<td align="center"><a href="http://www.robovm.org">下载</a></td>
+<td align="center"><a href="http://lab.rayps.com/lsg2/">下载</a></td>
+<td align="center"></td>
+</tr>
+<tr>
+<td align="left">android_resizer_toolkit</td>
+<td></td>
+<td align="center"><a href="https://github.com/marcosecchi/android_resizer_toolkit">下载</a></td>
+<td align="center"></td>
+</tr>
+<tr>
+<td align="left">android-ps-tools</td>
+<td>一些方便Android UI设计的PhototShop插件。</td>
+<td align="center"><a href="https://github.com/timroes/android-ps-tools">下载</a></td>
 <td align="center"></td>
 </tr>
 </tbody>
@@ -2634,13 +2639,6 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 </code></pre>
-        <hr>
-        <br>
-        <!-- UY BEGIN -->
-        <div id="uyan_frame"></div>
-        <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1948353"></script>
-        <!-- UY END -->
-        <br>
       </section>
     </div>
 
