Add LayerCraft PS Plugin

--- a/index.html
+++ b/index.html
@@ -2075,6 +2075,12 @@
 <td align="center"><a href="https://github.com/timroes/android-ps-tools">下载</a></td>
 <td align="center"></td>
 </tr>
+<tr>
+<td align="left">LayerCraft</td>
+<td>A Photoshop plugin to export UI assets from layers</td>
+<td align="center"><a href="http://lab.rayps.com/lc/">下载</a></td>
+<td align="center"></td>
+</tr>
 </tbody>
 </table><h4>
 <a name="%E7%9F%A2%E9%87%8F%E5%9B%BE%E8%AE%BE%E8%AE%A1%E5%B7%A5%E5%85%B7" class="anchor" href="#%E7%9F%A2%E9%87%8F%E5%9B%BE%E8%AE%BE%E8%AE%A1%E5%B7%A5%E5%85%B7"><span class="octicon octicon-link"></span></a>矢量图设计工具</h4>
